--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "test-simple-project",
   "version": "1.0.0",
   "description": "A simple project for testing CI/CD artifact collection",
-  "main": "src/index.js",
+  "main": "src/server.js",
   "scripts": {
     "build": "webpack --mode production",
-    "test": "jest"
+    "test": "jest",
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js"
   },
   "keywords": [
     "test",
@@ -13,8 +15,13 @@
   ],
   "author": "Test User",
   "license": "MIT",
+  "dependencies": {
+    "express": "^4.18.2"
+  },
   "devDependencies": {
     "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
+    "supertest": "^6.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   }
